kubernetes/apiserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modoki-apiserver-deployment
  namespace: modoki
  labels:
    app: modoki-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modoki-apiserver
  template:
    metadata:
      labels:
        app: modoki-apiserver
    spec:
      serviceAccountName: modoki-apiserver-sa
      containers:
        - name: modoki-apiserver
          imagePullPolicy: Always
          image: modokipaas/modoki-k8s
          args:
            - -m
            - -w
          ports:
            - containerPort: 443
          volumeMounts:
            - mountPath: /etc/modoki
              name: config
          env:
            - name: MODOKI_APP_DOMAIN
              value: $(MODOKI_APP_DOMAIN)
            - name: GRPC_GO_LOG_VERBOSITY_LEVEL
              value: "99"
            - name: GRPC_GO_LOG_SEVERITY_LEVEL
              value: info
          envFrom:
            - secretRef:
                name: modoki-api-key
            - secretRef:
                name: modoki-db-secret
          resources:
            limits: # ここで制限を指定
              cpu: "1"
              memory: 100Mi
      volumes:
        - name: config
          configMap:
            name: modoki-apiserver-config
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: modoki-apiserver-config
  namespace: modoki
data:
  apiserver.yaml: |
    endpoints:
      generator:
        endpoint: modoki-yamler-svc:443
        insecure: true
---
apiVersion: v1
kind: Service
metadata:
  name: modoki-apiserver-svc
  namespace: modoki
spec:
  selector:
    app: modoki-apiserver
  ports:
    - name: grpc-main
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: modoki-apiserver-sa
  namespace: modoki
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: modoki-apiserver-crb
subjects:
  - kind: ServiceAccount
    name: modoki-apiserver-sa
    namespace: modoki
roleRef:
  kind: ClusterRole
  name: cluster-admin
  apiGroup: rbac.authorization.k8s.io
