kubernetes/authserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modoki-authserver-deployment
  namespace: modoki
  labels:
    app: modoki-authserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modoki-authserver
  template:
    metadata:
      labels:
        app: modoki-authserver
    spec:
      containers:
        - name: modoki-authserver
          imagePullPolicy: Always
          image: modokipaas/modoki-auth
          ports:
            - containerPort: 443
              name: grpc
          volumeMounts:
            - mountPath: /etc/modoki
              name: config
          env:
            - name: GRPC_GO_LOG_VERBOSITY_LEVEL
              value: "99"
            - name: GRPC_GO_LOG_SEVERITY_LEVEL
              value: info
          envFrom:
            - secretRef:
                name: modoki-api-key
          resources:
            limits:
              cpu: "1"
              memory: 100Mi
      volumes:
        - name: config
          configMap:
            name: modoki-authserver-config
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: modoki-authserver-config
  namespace: modoki
data:
  authserver.yaml: |
    endpoints:
      app:
        endpoint: modoki-apiserver-svc:443
        insecure: true
      user_org:
        endpoint: modoki-apiserver-svc:443
        insecure: true
      token:
        endpoint: modoki-apiserver-svc:443
        insecure: true
---
apiVersion: v1
kind: Service
metadata:
  name: modoki-authserver-svc
  namespace: modoki
spec:
  selector:
    app: modoki-authserver
  ports:
    - port: 443
      targetPort: 443
      name: grpc
