kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: modoki
  labels:
    name: modoki
